--- a/src/web/App.module.css
+++ b/src/web/App.module.css
@@ -1,3 +1,8 @@
+.layout {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .header {
     display: 'flex';
     align-items: 'center';
@@ -16,6 +21,12 @@
 @media only screen and (min-width: 1440px) {
     .content {
         padding: 0 10% 75px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .content {
+        padding: 0 5px 75px;
     }
 }
 
