--- a/src/web/Table.module.css
+++ b/src/web/Table.module.css
@@ -10,20 +10,20 @@
     overflow-x: hidden;
 }
 
-.popupView img {
+.popupView video {
     width: 400px;
     object-fit: cover;
 }
 
 @media only screen and (min-width: 1440px) {
-    .popupView img {
+    .popupView video {
         width: 800px;
         object-fit: cover;
     }
 }
 
 @media only screen and (max-width: 900px) {
-    .popupView img {
+    .popupView video {
         width: 200px;
         object-fit: cover;
     }
