--- a/src/web/Table.module.css
+++ b/src/web/Table.module.css
@@ -15,15 +15,32 @@
     object-fit: cover;
 }
 
+.popupView img {
+    width: 400px;
+    object-fit: cover;
+}
+
 @media only screen and (min-width: 1440px) {
+
     .popupView video {
+        width: 800px;
+        object-fit: cover;
+    }
+
+    .popupView img {
         width: 800px;
         object-fit: cover;
     }
 }
 
 @media only screen and (max-width: 900px) {
+
     .popupView video {
+        width: 200px;
+        object-fit: cover;
+    }
+
+    .popupView img {
         width: 200px;
         object-fit: cover;
     }
