--- a/src/web/Table.module.css
+++ b/src/web/Table.module.css
@@ -10,40 +10,9 @@
     overflow-x: hidden;
 }
 
-.popupView video {
-    width: 400px;
-    object-fit: cover;
-}
-
-.popupView img {
-    width: 400px;
-    object-fit: cover;
-}
-
-@media only screen and (min-width: 1440px) {
-
-    .popupView video {
-        width: 800px;
-        object-fit: cover;
-    }
-
-    .popupView img {
-        width: 800px;
-        object-fit: cover;
-    }
-}
-
-@media only screen and (max-width: 900px) {
-
-    .popupView video {
-        width: 200px;
-        object-fit: cover;
-    }
-
-    .popupView img {
-        width: 200px;
-        object-fit: cover;
-    }
+.popupView {
+    width: auto;
+    height: auto;
 }
 
 .logButton span {
